--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^7.0.1",
     "prettier": "^3.0.3",
+    "sass": "^1.71.1",
     "vite": "^5.1.5"
   }
 }
