--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "element-plus": "^2.6.1",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
@@ -25,8 +27,11 @@
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "husky": "^7.0.1",
+    "pinia-plugin-persistedstate": "^3.2.1",
     "prettier": "^3.0.3",
     "sass": "^1.71.1",
+    "unplugin-auto-import": "^0.17.5",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.5"
   }
 }
